# KikkoCodeGUI

./: .gitattributes  .gitignore  .prettierrc  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  DEVLOG.md  LICENSE  PROGETTO.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 01-opencode-openapi-findings.md  02-provider-setup.md  03-adr-integration-layer.md  04-adr-web-preview.md  05-adr-visual-selection.md  06-adr-sidecar-bundling.md
scripts/: install.ps1  uninstall.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/capabilities/: default.json
src-tauri/src/: config_store.rs  dev_runner.rs  lib.rs  main.rs  preview_server.rs  process.rs
src-tauri/src/sidecar/: mod.rs
src/components/: ErrorBoundary.tsx  Panel.tsx
src/lib/: notify.ts  utils.test.ts  utils.ts
src/opencode/: OpencodeProvider.tsx  audit.ts  autopilot.ts  client.ts  config.ts  context.ts  enhance.ts  events.test.ts  events.ts  file.ts  hiddenSession.ts  memory.ts  messageShape.ts  modelCaps.ts  permission.ts  preview.ts  session.ts  sidecar.ts  silentSessions.ts  style.ts  useChatEvents.ts  version.test.ts  version.ts  workspace.ts
src/skills/: catalog.ts  importSkill.ts  match.test.ts  match.ts  previewPolicy.ts  recipes.test.ts  recipes.ts  skillsEngine.test.ts  webDesigner.test.ts  webDesigner.ts
src/stores/: autopilot.store.ts  chat.store.test.ts  chat.store.ts  composer.store.ts  (+24 more)
(+44 files in other folders)
